--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-web": "~0.11.7",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "expo-print": "^9.0.2",
+    "expo-sharing": "^8.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
